# Jordan-Bayless-Projects

./: README.md
C++/Homework1/: HW1.cpp  HW3.cpp  determineWeekDay.cc  in
C++/Homework2/: Math.c  README  Starter.c  hw2.cpp
C++/Homework3/: GetOpt.cpp  HW3.cpp  code.txt  examPrep.cpp  file  homework3Design.docx  hw3  limits  notWorkingCode2-24.txt  pearl  printTImeFunction.txt
C++/Homework3/Redo/: HW3.cpp  hw3.cc
C++/Homework4/: Ratio.cpp  Ratio.h  test.cpp  todo.txt
C++/Homework5/: Event.cc  Event.h  Schedule.cc  Schedule.h  helloWorld  helloWorld.cpp  test.cc
C++/Homework6/: CMakeLists.txt  Makefile  Ratio.cc  Ratio.h  test.cc
C++/finishedCode/: hw1.tar  hw2.tar  hw3.tar  hw4.tar  hw5.tar
C++/homework3Folder/: commands.sh  file  hw3  hw3.cc  pearl
C++/myHomework2/: hw2.cpp  in
C/mallocProgram/: Analyze.c  Analyze.h  AnalyzeCode.txt  Invoker  Invoker.c  InvokerCode.txt
Java/MapReduceProgram/HW3/: build.gradle  (+2 more)
Java/TCPSockets/: Jordan-Bayless-HW1.tar
Java/Threaded-Programs/: Jordan-Bayless-HW2.tar
JavaScript/: README.md
JavaScript/client/: package-lock.json  package.json
JavaScript/reports/: checklist.md  design.md  inspection1.md  inspection2.md  inspection3.md  inspection4.md  inspection5.md  inspection6.md  sprint1.md  sprint2.md  sprint3.md  sprint4.md  sprint5.md
JavaScript/server/: dependency-reduced-pom.xml  pom.xml
LeetCode/leetCode/: addTwoNumbers.cpp  curlScript.sh
Python/programmingAssignments/: dfbf.py  heap.py  heap_tests.py
Scripts/: automatedTester.sh  commands.sh  test  tester.sh
Scripts/startupScripts/: fixDate.sh
(+95 files in other folders)
